class up the table loading.

--- a/table.html
+++ b/table.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 
-<body><div id="researchOps">This is stuff</div>
+<body><div id="researchOps">Research Table Loading</div>
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script>
     jQuery.getScript('https://uab-apsa.googlecode.com/git/uabResearchTable.js', function (x) {
