--- a/form.html
+++ b/form.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link href="form-full.css" rel="stylesheet">
+		<script scr="jqueryUI.js"></script>
 	</head>
 	<body>
 		<title>UAB APSA Research Projects</title>
