--- a/form.html
+++ b/form.html
@@ -1,12 +1,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link href="form-full.css" rel="stylesheet">
+		<link href="http://uab-apsa.googlecode.com/git/form-full.css" rel="stylesheet">
 		<script scr="jqueryUI.js"></script>
 	</head>
 	<body>
 		<title>UAB APSA Research Projects</title>
 		<div class="login-card" id="main"></div>
-		<script scr="form-full.js"></script>
+		<script scr="http://uab-apsa.googlecode.com/git/form-full.js"></script>
 	</body>
 </html>
