Try to fix APSA research table thing...

--- a/table.html
+++ b/table.html
@@ -4,10 +4,13 @@
 
 <body><div id="researchOps">Research Table Loading</div>
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script>
-    jQuery.getScript('https://uab-apsa.googlecode.com/git/uabResearchTable.js', function (x) {
-        APSAtable.makeTable('researchOps');
-    });
+    <script src='https://uab-apsa.googlecode.com/git/uabResearchTable.js'>
+    	APSAtable.makeTable('researchOps');
     </script>
+    <!-- // <script>
+     jQuery.getScript('https://uab-apsa.googlecode.com/git/uabResearchTable.js', function (x) {
+         APSAtable.makeTable('researchOps');
+     });
+     </script> -->
 </body>
     </html>
