Try to fix APSA research table thing...

--- a/table.html
+++ b/table.html
@@ -4,13 +4,15 @@
 
 <body><div id="researchOps">Research Table Loading</div>
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <!-- 
     <script src='https://uab-apsa.googlecode.com/git/uabResearchTable.js'>
     	APSAtable.makeTable('researchOps');
     </script>
-    <!-- // <script>
+     -->
+     <script>
      jQuery.getScript('https://uab-apsa.googlecode.com/git/uabResearchTable.js', function (x) {
          APSAtable.makeTable('researchOps');
      });
-     </script> -->
+     </script>
 </body>
     </html>
