--- a/table.html
+++ b/table.html
@@ -2,17 +2,14 @@
 <head>
 </head>
 
-<body><div id="researchOps">Research Table Loading</div>
+<body>
+	<div id="researchOps">Research Table Loading</div>
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!-- 
-    <script src='https://uab-apsa.googlecode.com/git/uabResearchTable.js'>
-    	APSAtable.makeTable('researchOps');
-    </script>
-     -->
      <script>
      jQuery.getScript('https://uab-apsa.googlecode.com/git/uabResearchTable.js', function (x) {
          APSAtable.makeTable('researchOps');
      });
      </script>
+
 </body>
     </html>
