make mobile friendly

--- a/table2.html
+++ b/table2.html
@@ -6,7 +6,7 @@
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<div id="researchOps"></div>
     <script>
-     jQuery.getScript('https://uab-apsa.googlecode.com/git/buildUABResearchTable.js', function (x) {
+     jQuery.getScript('./buildUABResearchTable.js', function (x) {
          APSAtable.makeTable('researchOps');
      });
      </script>
