--- a/table.html
+++ b/table.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
      <script>
      jQuery.getScript('https://uab-apsa.googlecode.com/git/uabResearchTable.js', function (x) {
+     	// jQuery.getScript('uabResearchTable.js', function (x) {
          APSAtable.makeTable('researchOps');
      });
      </script>
