should reinitialize the modules

--- a/table2.html
+++ b/table2.html
@@ -6,7 +6,7 @@
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<div id="researchOps"></div>
     <script>
-     // jQuery.getScript('./buildUABResearchTable.js', function (x) {
+     // jQuery.getScript('./buildUABresearchTable.js', function (x) {
      	jQuery.getScript('https://uab-apsa.googlecode.com/git/buildUABresearchTable.js', function (x) {
          APSAtable.makeTable('researchOps');
      });
