--- a/table2.html
+++ b/table2.html
@@ -3,14 +3,7 @@
 </head>
 
 <body>
-	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<div id="researchOps"></div>
-    <script>
-     // jQuery.getScript('./buildUABresearchTable.js', function (x) {
-     	jQuery.getScript('https://uab-apsa.googlecode.com/git/buildUABresearchTable.js', function (x) {
-         APSAtable.makeTable('researchOps');
-     });
-     </script>
-
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js" onload="jQuery.getScript('https://uab-apsa.googlecode.com/git/buildUABresearchTable.js', function (x) {APSAtable.makeTable('researchOps');});"></script>
 </body>
     </html>
